# LearnWiKi

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: dmg_background.tiff  learnwiki_ocr.swift  learnwiki_ocr_bin
src-tauri/resources/markitdown/: README.md
src-tauri/scripts/: markitdown_converter.py  setup_markitdown.ps1  setup_markitdown.sh  xreader_wrapper.py
src-tauri/src/: lib.rs  lib.rs.bak  locale.rs
src-tauri/src/ai/: attention_analyzer.rs  client.rs  codex_api.rs  content_filter.rs  gemini_api.rs  gemini_oauth.rs  mod.rs  oauth.rs  preference_engine.rs  prompts.rs  report_generator.rs  time_filter.rs  wiki_engine.rs  wiki_prompts.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/capture/: clipboard.rs  content.rs  detector.rs  mod.rs  ocr.rs  screenshot.rs  sensitive_filter.rs  url_reader.rs
src-tauri/src/commands/: attention.rs  backup.rs  capture.rs  datahub.rs  digest.rs  discovery.rs  exam.rs  goal.rs  mcp.rs  mod.rs  oauth.rs  preferences.rs  ranking.rs  report.rs  review.rs  sandbox.rs  storage.rs  sync.rs  wiki.rs
src-tauri/src/discovery/: engine.rs  mod.rs  searcher.rs
src-tauri/src/export/: markdown.rs  mod.rs  sync.rs
src-tauri/src/matching/: keyword.rs  mod.rs  sensitivity.rs
src-tauri/src/scheduler/: weekly.rs
src-tauri/src/storage/: database.rs  mod.rs  (+2 more)
src-tauri/tests/: integration_tests.rs
(+223 files in other folders)
